Table "beacon" {
  "id" int [pk, not null, increment]
  "name" varchar(255) [not null]
  "longitude" double [not null]
  "latitude" double [not null]
  "type" varchar(255) [not null]
  "is_placed" tinyint(1) [not null]
  "placed_at" datetime
  "created_at" datetime
  "qr" varchar(255) [not null]
}

Table "beacon_course" {
  "beacon_id" int [not null]
  "course_id" int [not null]

  Indexes {
    course_id [type: btree, name: "IDX_4EDA6FBC591CC992"]
    beacon_id [type: btree, name: "IDX_4EDA6FBCF6AD5578"]
    (beacon_id, course_id) [pk, name: "PRIMARY"]
  }
}

Table "boundaries_course" {
  "id" int [pk, not null, increment]
  "longitude" double [not null]
  "latitude" double [not null]
  "course_id" int

  Indexes {
    course_id [type: btree, name: "IDX_1BEB33BC591CC992"]
  }
}

Table "course" {
  "id" int [pk, not null, increment]
  "name" varchar(255) [not null]
  "description" varchar(255) [not null]
  "status" varchar(255) [not null]
  "create_at" datetime [not null]
  "placement_completed_at" datetime [not null]
  "update_at" datetime [not null]
  "user_id" int

  Indexes {
    user_id [type: btree, name: "IDX_169E6FB9A76ED395"]
  }
}

Table "doctrine_migration_versions" {
  "version" varchar(191) [pk, not null]
  "executed_at" datetime
  "execution_time" int
}

Table "establishment" {
  "id" int [pk, not null, increment]
  "name" varchar(255) [not null]
}

Table "log_session" {
  "id" int [pk, not null, increment]
  "type" varchar(255) [not null]
  "time" datetime [not null]
  "latitude" double
  "longitude" double
  "additional_data" longtext
  "runner_id" int

  Indexes {
    runner_id [type: btree, name: "IDX_E889ED433C7FB593"]
  }
}

Table "messenger_messages" {
  "id" bigint [pk, not null, increment]
  "body" longtext [not null]
  "headers" longtext [not null]
  "queue_name" varchar(190) [not null]
  "created_at" datetime [not null, note: '(DC2Type:datetime_immutable)']
  "available_at" datetime [not null, note: '(DC2Type:datetime_immutable)']
  "delivered_at" datetime [note: '(DC2Type:datetime_immutable)']

  Indexes {
    delivered_at [type: btree, name: "IDX_75EA56E016BA31DB"]
    available_at [type: btree, name: "IDX_75EA56E0E3BD61CE"]
    queue_name [type: btree, name: "IDX_75EA56E0FB7336F0"]
  }
}

Table "reset_password_request" {
  "id" int [pk, not null, increment]
  "user_id" int [not null]
  "selector" varchar(20) [not null]
  "hashed_token" varchar(100) [not null]
  "requested_at" datetime [not null, note: '(DC2Type:datetime_immutable)']
  "expires_at" datetime [not null, note: '(DC2Type:datetime_immutable)']

  Indexes {
    user_id [type: btree, name: "IDX_7CE748AA76ED395"]
  }
}

Table "runner" {
  "id" int [pk, not null, increment]
  "name" varchar(255) [not null]
  "departure" datetime [not null]
  "arrival" datetime [not null]
  "session_id" int

  Indexes {
    session_id [type: btree, name: "IDX_F92B8B3E613FECDF"]
  }
}

Table "session" {
  "id" int [pk, not null, increment]
  "session_name" varchar(255) [not null]
  "nb_runner" int [not null]
  "course_id" int

  Indexes {
    course_id [type: btree, name: "IDX_D044D5D4591CC992"]
  }
}

Table "user" {
  "id" int [pk, not null, increment]
  "email" varchar(180) [unique, not null]
  "roles" json [not null]
  "password" varchar(255) [not null]
  "establishment_id" int

  Indexes {
    establishment_id [type: btree, name: "IDX_8D93D6498565851"]
  }
}

Ref "FK_4EDA6FBC591CC992":"course"."id" < "beacon_course"."course_id" [delete: cascade]

Ref "FK_4EDA6FBCF6AD5578":"beacon"."id" < "beacon_course"."beacon_id" [delete: cascade]

Ref "FK_1BEB33BC591CC992":"course"."id" < "boundaries_course"."course_id"

Ref "FK_169E6FB9A76ED395":"user"."id" < "course"."user_id"

Ref "FK_E889ED433C7FB593":"runner"."id" < "log_session"."runner_id"

Ref "FK_7CE748AA76ED395":"user"."id" < "reset_password_request"."user_id"

Ref "FK_F92B8B3E613FECDF":"session"."id" < "runner"."session_id"

Ref "FK_D044D5D4591CC992":"course"."id" < "session"."course_id"

Ref "FK_8D93D6498565851":"establishment"."id" < "user"."establishment_id"
